Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gst-plugins-base
gst-plugins-base
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 633
    • Issues 633
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 101
    • Merge Requests 101
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-basegst-plugins-base
  • Issues
  • #845

Closed
Open
Opened Dec 07, 2020 by Ivan Molodetskikh@YaLTeR

Smart encoding error on a VP9 video: Can not link smart encoding elements

Fedora 33, 6434db52

Peek_2020-09-02_17-57

└─ ges-launch-1.0 +clip Downloads/Peek_2020-09-02_17-57.webm -o out.webm --smart-rendering

Encoding details:
================
  -> Output file: out.webm
  -> Profile:
     > ∋ WebM: default (Default profile for files with a .webm extension. Audio stream can be either vorbis (default) or opus depending on what is available on the system. Video stream will be either in vp8 (default) or vp9.)
       - ♫ audio/x-vorbis; audio/x-opus
       - ▶ video/x-vp8; video/x-vp9

0:00:00.135860224 76771      0x1ccd430 ERROR          encodebasebin gstencodebasebin.c:1259:setup_smart_encoder:<internal-encodebin> Can not link smart encoding elements
**Mixing is disabled for smart rendering to work**

Timeline description:
====================

  layer 0:
  --------
    - Clip from: 'file:///home/yalter/Downloads/Peek_2020-09-02_17-57.webm' [∋WebM, ▶VP9]
        start=0:00:00.000000000 duration=0:00:18.419552612

0:00:00.212790154 76771      0x1ccd430 ERROR               validate gst-validate-reporter.c:198:gst_validate_report_valist: <gespipeline0> 3565 (critical) : runtime: We got an ERROR message on the bus : Got error: GStreamer encountered a general stream error. -- Debug message: ../subprojects/gst-editing-services/ges/ges-pipeline.c(563): _link_tracks (): /GESPipeline:gespipeline0:
Following encodebin pads are not linked:
 - /GESPipeline:gespipeline0/GstEncodeBin:internal-encodebin.GstGhostPad:video_3: video/x-vp9, width=(int)[ 16, 2147483647 ], height=(int)[ 16, 2147483647 ], framerate=(fraction)[ 0/1, 2147483647/1 ] ((NULL))
ERROR from element gespipeline0: GStreamer encountered a general stream error.

Debugging info: ../subprojects/gst-editing-services/ges/ges-pipeline.c(563): _link_tracks (): /GESPipeline:gespipeline0:
Following encodebin pads are not linked:
 - /GESPipeline:gespipeline0/GstEncodeBin:internal-encodebin.GstGhostPad:video_3: video/x-vp9, width=(int)[ 16, 2147483647 ], height=(int)[ 16, 2147483647 ], framerate=(fraction)[ 0/1, 2147483647/1 ]

   warning : received an unexpected flush stop event
             Detected on <nlesource3:src>

  critical : We got an ERROR message on the bus
             Detected on <gespipeline0>
             Details : Got error: GStreamer encountered a general stream error. -- Debug message: ../subprojects/gst-editing-services/ges/ges-pipeline.c(563): _link_tracks (): /GESPipeline:gespipeline0:
                     Following encodebin pads are not linked:
                      - /GESPipeline:gespipeline0/GstEncodeBin:internal-encodebin.GstGhostPad:video_3: video/x-vp9, width=(int)[ 16, 2147483647 ], height=(int)[ 16, 2147483647 ], framerate=(fraction)[ 0/1, 2147483647/1 ] ((NULL))
             dotfile : no dotfile produced as GST_DEBUG_DUMP_DOT_DIR is not set.
             backtrace :
               gst_debug_get_stack_trace (gstinfo.c:3126)
               gst_validate_report_new (gst-validate-report.c:840)
               gst_validate_report_valist (gst-validate-reporter.c:189)
               gst_validate_report (gst-validate-reporter.c:323)
               _bus_handler (gst-validate-pipeline-monitor.c:602)
               g_cclosure_marshal_VOID__BOXEDv (gmarshal.c:1686)
               g_signal_emit_valist (gclosure.c:873)
               g_signal_emit (gsignal.c:3550)
               gst_bus_sync_signal_handler (gstbus.c:1322)
               gst_bus_post (gstbus.c:366)
               gst_element_post_message_default (gstelement.c:2080)
               gst_bin_post_message (gstmessage.h:376)
               gst_element_post_message (gstelement.c:2123)
               gst_element_message_full_with_details (gstelement.c:2259)
               gst_element_message_full (gstelement.c:2298)
               ges_pipeline_change_state (ges-pipeline.c:563)
               gst_element_change_state (gstelement.c:3046)
               gst_element_change_state (gstelement.c:3085)
               gst_element_set_state_func (gstelement.c:3000)
               _startup (ges-launcher.c:944)
               g_signal_emit_valist (gclosure.c:873)
               g_signal_emit (gsignal.c:3550)
               g_application_register (gapplication.c:2204)
               _local_command_line (ges-launcher.c:1338)
               g_application_run (gapplication.c:2528)
               main (ges-launch.c:35)
               __libc_start_main (libc-start.c:314)
               _start (/home/yalter/source/c/gst-build/build/subprojects/gst-editing-services/tools/ges-launch-1.0:0x405e2a)




**Got criticals. Return value set to 18**:
  * critical error Got error: GStreamer encountered a general stream error. -- Debug message: ../subprojects/gst-editing-services/ges/ges-pipeline.c(563): _link_tracks (): /GESPipeline:gespipeline0:
Following encodebin pads are not linked:
 - /GESPipeline:gespipeline0/GstEncodeBin:internal-encodebin.GstGhostPad:video_3: video/x-vp9, width=(int)[ 16, 2147483647 ], height=(int)[ 16, 2147483647 ], framerate=(fraction)[ 0/1, 2147483647/1 ] ((NULL))

Issues found: 2
Assignee
Assign to
1.19.1
Milestone
1.19.1 (Past due)
Assign milestone
Time tracking
None
Due date
None
Reference: gstreamer/gst-plugins-base#845